# sidekick

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README-TAURI.md  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test-chord-detection.ts  tsconfig.json  vite.renderer.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/hooks/: post-edit.sh
docs/: musicgen-api.md  suno-api.md
sidecar/: build.js  instrumentation.ts  package-lock.json  package.json  test-suno-response.js  tsconfig.json
sidecar/src/: agent.ts  chat-handler.ts  musicgen.ts  prompts.ts
src/: App.tsx  index.css  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sidecar-node20-macos-arm64  sidecar-node20-macos-x64
src-tauri/capabilities/: default.json
src-tauri/src/: ableton_osc.rs  lib.rs  main.rs
src/components/: AbletonOSCSetup.tsx  AudioDropZone.tsx  AudioPlayer.tsx  ChatInterface.tsx  ChordProgression.tsx  ConversationTabs.tsx  DraggableAudioFile.tsx  FirstTimeSetup.tsx  GenerationPanel.tsx  MusicServiceSelector.tsx  PonyAnimations.tsx  ProjectBar.tsx  SettingsPanel.tsx  SetupGuide.tsx  StatusBar.tsx  TauriDropzone.tsx  ThemeSelector.tsx  ToolCallDisplay.tsx
src/hooks/: useAbleton.ts  useAgent.ts  useAudioGeneration.ts
src/lib/: ableton-osc.ts  db.ts  tauri-api.ts  titleGenerator.ts
src/main/: index.ts  ipc.ts  mastra.ts
src/renderer/: App.tsx  index.css  index.tsx
src/services/: chordDetection.ts
src/shared/: audio-analysis-prompts.ts  essentia-utils.ts  prompts.ts
src/test/: setup.ts
(+104 files in other folders)
